# tencim1D-mesh-generator

./: README.md  main.py  pyproject.toml
.github/workflows/: CI.yml
src/tencim1d_mesh_generator/: __init__.py  errors.py  mesh.py  standoff.py
tests/: consts.py  test_mesh.py  test_standoff.py
tests/mesh/: test_make_mesh.py  test_mesh.py  test_mesh_with_standoff.py
