[project]
name = "tencim1d-mesh-generator"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Henrique C. C. de Andrade", email = "henrique.ccda@gmail.com" }
]
requires-python = ">= 3.12, < 3.14"
dynamic = ["version"]
dependencies = []

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipdb>=0.13.13",
    "ruff>=0.12.4",
    "taskipy>=1.14.1",
    "ty>=0.0.1a25",
]
test = [
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
]

[tool.ruff]

line-length = 120

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]

select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]

[tool.mypy]
warn_return_any = true
warn_unused_configs = true
pretty = true

[tool.taskipy.tasks]

pre_fmt = {cmd="uv run ruff check src tests --fix"}

fmt = {cmd="uv run ruff format src tests", help="Formatador do código."}

lin_ruff = {cmd="uv run ruff check src tests", help="Linter com o Ruff."}

lin_ty = {cmd="uv run ty check", help="Analisador estático de tipos."}

linter = {cmd="task lin_ruff && task lin_ty", help="Linter."}

tests = {cmd="uv run pytest --cov=tencim1d_mesh_generator", help="Rodando os testes."}
tests_report = {cmd="uv run pytest --cov-report html --cov=tencim1d_mesh_generator", help="Rodando os testes com cobertura."}

[tool.pytest.ini_options]
addopts = "-ra -vv --strict-markers --disable-warnings"
testpaths = [
    "tests",
]

[tool.hatch.version]
source = "vcs"
